--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "rabbit-mq"
 version = "0.1.0"
 description = ""
+package-mode = false
 authors = [
     {name = "Евгений Бусыгин (ноутбук)",email = "busyginz@mail.ru"}
 ]
