--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   rabbitmq:
     image: rabbitmq:3.12-management # Specifies the RabbitMQ image with management UI
@@ -9,14 +8,17 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: user # Default username
       RABBITMQ_DEFAULT_PASS: password # Default password
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq # Persistent volume for data
-    networks:
-      - app-network # Connects to a custom network
 
-volumes:
-  rabbitmq_data: # Defines the named volume
-
-networks:
-  app-network: # Defines the custom network
-    driver: bridge
+  maildev:
+    image: maildev/maildev
+    environment:
+      - TZ=Europe/Moscow
+      - MAILDEV_WEB_PORT=1080
+      - MAILDEV_SMTP_PORT=1025
+    ports:
+      - "8080:1080"
+      - "1025:1025"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
