--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "pika (>=1.3.2,<2.0.0)"
+    "pika (>=1.3.2,<2.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "kombu (>=5.5.4,<6.0.0)"
 ]
 
 
