--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.11"
 dependencies = [
     "pika (>=1.3.2,<2.0.0)",
     "celery (>=5.5.3,<6.0.0)",
-    "kombu (>=5.5.4,<6.0.0)"
+    "kombu (>=5.5.4,<6.0.0)",
+    "flower (>=2.0.1,<3.0.0)"
 ]
 
 
